--- a/Styles/style.css
+++ b/Styles/style.css
@@ -10,52 +10,53 @@
 
 body {
     background-color: #2B2923;
+    max-width: 1440px;
 }
 
 nav {
     display: flex;
-    height: 20vh;
+    height: 15vh;
     align-items: center;
     justify-content: space-between;
 }
 
-nav:first-child {
-    margin-left: 250px;
+.logo {
+    margin-left: 400px;
     cursor: pointer;
+    margin-right: 300px;
 }
 
 nav ul {
     display: flex;
     align-items: center;
     /* justify-content: space-between; */
-    margin-right: 200px;
+    /* margin-right: px; */
 }
 
 nav ul li {
     list-style: none;
-    margin-right: 40px;
+    /* margin-left: -20px; */
+    margin-right: 30px;
     color: #c9d6de;
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
-    font-size: 16px;
+    font-size: 14px;
+    font-weight: 200;
 }
 
 nav ul li button {
     background-color: transparent;
     border: solid #9E8E36 1px;
-    padding: 15px 30px;
+    padding: 12px 20px;
     color: #9E8E36;
     border-radius: 8px;
     cursor: pointer;
-    font-size: 17px;
+    font-size: 14px;
     font-family: 'Poppins', sans-serif;
 }
 
-/* main {
-    
-} */
 
-main section {
+ main section {
     height: 50%;
 }
 
@@ -64,16 +65,30 @@ main section {
 }
 
 .topSection h1 {
-    /* width: px; */
     margin-left: 240px;
     margin-right: 500px;
     font-weight: 800;
     font-size: 60px;
     color: #F1F0EE;
     font-family: 'Montserrat', sans-serif;
+    line-height: 80px;
+    width: 110vw;
 }
 
 .topSection p {
+    position: relative;
     color: #F1F0EE;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    margin-left: -100px;
+    margin-right: 500px;
+    font-size: 20px;
+    width: 50vw;
+    margin-top: 20px;
+    line-height: 20px;
+}
+
+.bottomSection img {
+    position: relative;
+    margin-top: 40px;
+    margin-left: 300px;
 }
